--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: oxfordrse/gutenberg-devcontainer-ci@${{ github.sha }}
+        uses: oxfordrse/gutenberg-devcontainer-ci@dev
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
