--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,7 @@ on: [push]
 jobs:
   test_self:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Test self
     steps:
-      - name: Hello world action step
-        id: hello
+      - name: Run action on self
         uses: oxfordrse/gutenberg-devcontainer-ci@dev
-        with:
-          who-to-greet: 'Mona the Octocat'
-      # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
