--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,5 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
-inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
-outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+name: 'Gutenberg Devcontainer CI'
+description: 'Scan a Gutenberg repository for lessons with devcontainers and run them in CI.'
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  args:
-    - ${{ inputs.who-to-greet }}
