--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,5 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Test self
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Run action on self
         uses: oxfordrse/gutenberg-devcontainer-ci@dev
